--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -396,7 +396,10 @@ services:
             - @doctrine.em
             - @ldap
             - @permissions.new
-            - @permissions
+            - @json
+        calls:
+            - ['setCache', [@cache]]
+            - ['setCacheTTL', [%cache.page.ttl%]]
     user.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['user/user.twig']]]
