--- a/configuration/routes.yml
+++ b/configuration/routes.yml
@@ -86,12 +86,16 @@ parameters:
             route: '/admin/permissions'
             stack: ['middleware.admin', 'admin.permissions.page']
 
+        admin.permissions.deployment:
+            method: 'GET'
+            route: '/admin/permissions/deployment'
+            stack: ['middleware.admin', 'admin.permissions.deployment.page']
+
         admin.permissions.remove.confirm:
             method: 'GET'
             route: '/admin/permissions/:userType/remove'
             stack: ['middleware.admin', 'middleware.requireEntity', 'admin.permissions.remove.page']
             conditions: {userType: %routes.regex.guid%}
-
         admin.permissions.remove:
             method: 'POST'
             route: '/admin/permissions/:userType/remove'
@@ -103,6 +107,17 @@ parameters:
             route: '/admin/permissions/:user/add'
             stack: ['middleware.admin', 'middleware.requireEntity', 'admin.permissions.add.page']
             conditions: {user: %routes.regex.digit%}
+
+        admin.permissions.deployment.remove.confirm:
+            method: 'GET'
+            route: '/admin/permissions/deployment/:userPermission/remove'
+            stack: ['middleware.admin', 'middleware.requireEntity', 'admin.permissions.deployment.remove.page']
+            conditions: {userPermission: %routes.regex.guid%}
+        admin.permissions.deployment.remove:
+            method: 'POST'
+            route: '/admin/permissions/deployment/:userPermission/remove'
+            stack: ['middleware.admin', 'middleware.requireEntity', 'admin.permissions.deployment.remove.handler']
+            conditions: {userPermission: %routes.regex.guid%}
 
         ################################################################################################################
         # SUPER ADMIN ROUTES
