--- a/configuration/di/services.api.yml
+++ b/configuration/di/services.api.yml
@@ -87,4 +87,4 @@ services:
 
     normalizer.user:
         class: 'QL\Hal\Api\Normalizer\UserNormalizer'
-        arguments: [@permissions.new]
+        arguments: [@permissions]
