--- a/configuration/di/services.middleware.yml
+++ b/configuration/di/services.middleware.yml
@@ -40,7 +40,7 @@ services:
             - @service_container
             - @middleware.login
             - @denied.twig
-            - @permissions.new
+            - @permissions
             - @slim.halt
 
     middleware.admin:
@@ -49,7 +49,7 @@ services:
             - @service_container
             - @middleware.login
             - @denied.twig
-            - @permissions.new
+            - @permissions
             - @slim.halt
 
     middleware.super:
@@ -58,5 +58,5 @@ services:
             - @service_container
             - @middleware.login
             - @denied.twig
-            - @permissions.new
+            - @permissions
             - @slim.halt
