--- a/configuration/kraken/kraken.routes.yml
+++ b/configuration/kraken/kraken.routes.yml
@@ -20,6 +20,11 @@ parameters:
             route: '/kraken/environments'
             stack: ['middleware.login', 'kraken.environments.page']
 
+        kraken.help:
+            method: 'GET'
+            route: '/kraken/help'
+            stack: ['kraken.help.page']
+
         ################################################################################################################
         # APPLICATION
         ################################################################################################################
@@ -34,18 +39,33 @@ parameters:
             stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.status.page']
             conditions: {application: %routes.kraken.regex.hex%}
 
+        kraken.application.add:
+            route: '/kraken/applications/add'
+            stack: ['middleware.login', 'kraken.application.add.page']
+
+        # protected
         kraken.application.edit:
             route: '/kraken/applications/:application/edit'
-            stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.application.edit.page']
+            stack: ['kraken.middleware.lead', 'kraken.middleware.require.entity', 'kraken.application.edit.page']
+            conditions: {application: %routes.kraken.regex.hex%}
+
+        # protected
+        kraken.application.target.add:
+            route: '/kraken/applications/:application/environments'
+            stack: ['kraken.middleware.lead', 'kraken.middleware.require.entity', 'kraken.application.target.add.page']
             conditions: {application: %routes.kraken.regex.hex%}
 
         ################################################################################################################
         # ENVIRONMENT
         ################################################################################################################
 
+        kraken.environment.add:
+            route: '/kraken/environments/add'
+            stack: ['middleware.super', 'kraken.environment.add.page']
+
         kraken.environment.edit:
             route: '/kraken/environments/:environment/edit'
-            stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.environment.edit.page']
+            stack: ['middleware.super', 'kraken.middleware.require.entity', 'kraken.environment.edit.page']
             conditions: {environment: %routes.kraken.regex.hex%}
 
         ################################################################################################################
@@ -82,50 +102,37 @@ parameters:
                 environment: %routes.kraken.regex.hex%
 
         ################################################################################################################
-        # CRUD
-        ################################################################################################################
-
-        # add application
-        kraken.add_application:
-            route: '/kraken/applications/add'
-            stack: ['middleware.login', 'kraken.application.add.page']
-
-        # add environment
-        kraken.add_environment:
-            route: '/kraken/environments/add'
-            stack: ['middleware.login', 'kraken.environment.add.page']
-
-        ################################################################################################################
-        # CRUD - APPLICATION
-        ################################################################################################################
-
-        # add environment to application
-        kraken.application.add_target:
-            route: '/kraken/applications/:application/environments'
-            stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.application.target.add.page']
-            conditions: {application: %routes.kraken.regex.hex%}
-
-        ################################################################################################################
         # CRUD - SCHEMA
         ################################################################################################################
 
+        # protected
         kraken.schema:
             route: '/kraken/applications/:application/configuration-schema'
-            stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.application.schema.page']
+            stack: ['kraken.middleware.lead', 'kraken.middleware.require.entity', 'kraken.application.schema.page']
             conditions:
                 application: %routes.kraken.regex.hex%
 
+        # protected
         kraken.schema.add:
             route: '/kraken/applications/:application/schemas/add'
-            stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.schema.add.page']
+            stack: ['kraken.middleware.lead', 'kraken.middleware.require.entity', 'kraken.schema.add.page']
             conditions: {application: %routes.kraken.regex.hex%}
 
+        # protected
+        kraken.schema.skeletor:
+            method: 'POST'
+            route: '/kraken/applications/:application/schemas/prime-skeletor'
+            stack: ['kraken.middleware.lead', 'kraken.middleware.require.entity', 'kraken.schema.skeletor.handler']
+            conditions:
+                application: %routes.kraken.regex.hex%
+
+#???protected
         kraken.schema.edit:
             route: '/kraken/schemas/:schema/edit'
             stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.schema.edit.page']
             conditions:
                 schema: %routes.kraken.regex.hex%
-
+#???protected
         kraken.schema.remove.confirm:
             method: 'GET'
             route: '/kraken/schemas/:schema/remove'
@@ -138,13 +145,6 @@ parameters:
             stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.schema.remove.handler']
             conditions:
                 schema: %routes.kraken.regex.hex%
-
-        kraken.schema.skeletor:
-            method: 'POST'
-            route: '/kraken/applications/:application/schemas/prime-skeletor'
-            stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.schema.skeletor.handler']
-            conditions:
-                application: %routes.kraken.regex.hex%
 
         ################################################################################################################
         # CRUD - PROPERTY
@@ -210,12 +210,3 @@ parameters:
             route: '/kraken/configurations/:configuration/rollback'
             stack: ['middleware.login', 'kraken.middleware.require.entity', 'kraken.rollback.handler']
             conditions: {configuration: %routes.kraken.regex.hex%}
-
-        ################################################################################################################
-        # HELP ROUTES
-        ################################################################################################################
-
-        kraken.help:
-            method: 'GET'
-            route: '/kraken/help'
-            stack: ['kraken.help.page']
