--- a/configuration/routes.yml
+++ b/configuration/routes.yml
@@ -77,6 +77,11 @@ parameters:
             stack: ['middleware.admin', 'admin.audit.logs.page']
             conditions: {page: %routes.regex.digit%}
 
+        admin.system.status:
+            method: 'GET'
+            route: '/admin/status'
+            stack: ['middleware.admin', 'admin.system.status.page']
+
         ################################################################################################################
         # ADMIN ROUTES - PERMISSIONS
         ################################################################################################################
